# customer-management

./: .gitignore  Cargo.toml
.github/workflows/: ci.yml
customer-management/: README.md  package-lock.json  package.json
customer-management/src/: App.css  App.tsx
customer-management/src-tauri/: Cargo.toml  tauri.conf.json
customer-management/src-tauri/migrations/: 0001_create_schema.sql  0002_seed_data.sql
customer-management/src-tauri/src/: auth.rs  crm.rs  domain.rs  lib.rs  main.rs  storage.rs
customer-management/src-tauri/tests/: auth.rs  crm_access.rs  customer_crud.rs  customer_followup.rs  customer_owner.rs  domain.rs  e2e_flow.rs  lead_conversion.rs  lead_followup.rs  lead_owner.rs  search_filter.rs  storage.rs
docs/superpowers/plans/: 2026-04-10-customer-followup.md  2026-04-10-customer-management-task-1-1-plan.md  2026-04-10-e2e-flow.md  2026-04-10-lead-conversion.md  2026-04-10-search-filter.md  2026-04-10-task-1-1-tauri-foundation.md  2026-04-10-task-1-2-crm-data-model.md  2026-04-10-task-1-3-persistence-and-seed.md  2026-04-10-task-1-3-postgres-persistence.md  2026-04-10-task-2-1-simple-auth.md  2026-04-10-task-2-2-protected-crm-access.md  2026-04-10-task-3-1-lead-crud.md  2026-04-10-task-3-2-lead-owner-assignment.md  2026-04-10-task-3-3-lead-followup.md  2026-04-10-task-4-1-customer-crud.md  2026-04-10-task-4-2-customer-owner-assignment.md
docs/superpowers/specs/: 2026-04-10-customer-management-system-design.md
tests/: project-rename.test.mjs  task-1.1-tauri-foundation.test.mjs  test_app.py
(+8 files in other folders)
